[project]
name = "langchain-learning"
version = "0.1.0"
description = "Learning about LangChain and its integrations."
readme = "README.md"
requires-python = ">=3.13, <=3.14.0"
dependencies = [
    "langchain>=1.0.2",
    "langchain-google-genai>=3.0.0",
    "langchain-ollama>=1.0.0",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.11.0",
]
